fixed bad widths on iphones

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -84,7 +84,7 @@ body {
 }
 
 .main-page-container {
-  margin-top: 14rem;
+  margin-top: 14rem !important;
   position: relative;
   z-index: 1;
 }
@@ -120,6 +120,7 @@ body {
 .container {
   width: 100%;
   max-width: 1200px;
+  margin: 0 auto;
 }
 
 .navbar-container {
@@ -1126,20 +1127,6 @@ footer p {
   transition: all 0.3s ease;
   background: rgba(var(--background-color-rgb), 0.05);
   border-radius: 4px;
-}
-
-footer p:hover {
-  transform: translateY(-3px) scale(1.02);
-  background: rgba(var(--background-color-rgb), 0.1);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-footer p:last-of-type {
-  font-style: italic;
-  opacity: 0.9;
-  font-size: 0.9rem;
-  background: none;
-  margin-top: 1rem;
 }
 
 .footer-particles {
@@ -3200,11 +3187,11 @@ footer p:last-of-type {
   }
 
   #personal h1 {
-    font-size: 0.99rem;
+    font-size: 0.85rem;
   }
   #personal .personal-based-in-and-time {
     padding: 0;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
 
   #personal .personal-info-spotify {
